<resources>
    <string name="dash">-</string>
    <string name="channel_name">my_channel</string>
    <string name="channel_description">my_channel_des</string>
    <string name="motivational_quote">Smile is a gift, start everyday with a smile</string>
    <string name="app_name">Saksham</string>
    <string name="app_dev">App developed by CODESLAB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="report">Reports</string>
    <string name="library">Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="want_alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="medic_adhere">Medical Adherence</string>
    <string name="daily_routine">Daily Routine</string>
    <string name="phy_health">Physical Health</string>
    <string name="phy_health_desc">Some Informative Text Description about the necessity of Physical Health Monitoring</string>
    <string name="health_monitoring_label">Health Measures</string>
    <string name="placeholder">Placeholder Information</string>
    <string name="enter_value_hint">Enter value</string>
    <string name="units_placeholder">unit</string>
    <string name="skip_text">skip</string>
    <string name="submit_text">submit</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Info</string>
    <string name="title_notifications">Progress</string>
    <string name="title_sarthi">Saarthi</string>
    <string name="title_activity_health_monitor_tabbed">Health Monitor</string>
    <string name="submit">Submit</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="test_prompt">Choose a test</string>
    <string name="other_tests_label">Other Tests</string>
    <string name="common_tests_label">Common Tests</string>
    <string name="title_activity_medical_adherence">Medical Adherence</string>
    <string name="add_medicine_information">Add medicine information</string>
    <string name="add_injection_information">Add injection information</string>
    <string name="blank_inj_record_text">No injection record! Click \'+\' button above to add injection information!</string>
    <string name="blank_med_record_text">No medicine record! Click \'+\' button above to add medicine information!</string>
    <string name="medicine_name">Select Medicine</string>
    <string name="injection_name">Select Injection</string>
    <string name="med_desc">Short Medicine Description (Optional)</string>
    <string name="inj_desc">Short Injection Description (Optional)</string>
    <string name="def_med_morning">08:00</string>
    <string name="med_field_error">Enter a name of the medicine</string>
    <string name="inj_field_error">Enter a name of the injection</string>
    <string name="iadl">IADL</string>
    <string name="diet">Eating Right</string>
    <string name="medreports">Reports</string>
    <string name="myday">My Day</string>
    <string name="done">Done</string>
    <string name="activity_added">Activity Added</string>
    <string name="injection_schedule">Injection Schedule</string>
    <string name="select_daily_tasks">Select daily tasks</string>
    <string name="blank_daily_rout_record_text">No daily routine task record! Click \'+\' button above to add daily task information!</string>
    <string name="psycho_education">Psycho Education</string>
    <string name="IADL">Self Reliance</string>
    <string name="psycho_edu_ques">PSychoeducation Questions</string>
    <string name="team_saksham">Team Saksham</string>
    <string-array name="questions">
        <item>What is physical health monitoring?</item>
        <item>Why is physical health monitoring important for you?</item>
        <item>What are the reasons for increased physical health problems in patients with schizophrenia?</item>
        <item>Why should we do regular physical monitoring in patients with schizophrenia?</item>
    </string-array>
    <string-array name="answers">
		<item>
			<p align="right">
            Regular assessment and charting of few important physical parameters by the doctor at fixed intervals is called physical health monitoring.
        It includes few simple physical tests such as Blood pressure, pulse monitoring etc. performed by the doctor during your visit and some blood investigations.
        The interval of monitoring (e.g. monthly, weekly etc.) will be decided by your treating doctor and communicated to you.
                Physical health monitoring is an integral part in the management of patients with schizophrenia. </p>
		</item>
        <item>People with schizophrenia have increased rates of physical illness compared with the general population.
        Research has shown that the life expectancy of people with schizophrenia is reduced by 10 years as compared to general population.</item>
        <item>There are several reasons for increased physical health problems:\n
        - Lack of monitoring and assessment of various parameters which can help in early detection of physical problems.\n
        - The health care needs of patients with mental illnesses are sometimes overlooked.\n
        - Patients with schizophrenia are often not able to communicate their physical problems to the doctor clearly.\n
        - Improper dietary habits\n
        - Lack of physical activity\n
        - Disturbances in lifestyle due to schizophrenia (e.g. poor self-care, disturbed sleep etc.)\n
        - Not following treatment regimen properly. (poor adherence)\n
        - Co-morbid substance use disorders (alcohol, tobacco, cannabis) worsens the physical health.\n
        - Side effects of medications
        </item>
        <item>Early detection of physical problems leads to effective management
        It can prevent development of full-blown metabolic disorders such as Diabetes Mellitus, Hypertension, if corrected early.
        It motivates lifestyle modifications at the earliest which also helps in improvement of physical health
        Side effects of medicines are also detected early.
        </item>
    </string-array>
    <string-array name="daily_routine_que">
        <item>Why do you need to wake up on time?</item>
        <item>Why do you need to brush your teeth daily?</item>
        <item>Why do you need to take bath daily?</item>
        <item>What is the importance of taking meals and on time?</item>
        <item>Why do you need to take 8 hours of sleep and maintain regular sleep time?</item>
        <item>What is the importance of walking for you? </item>
        <item>Why do you need to engage in leisure activities daily?</item>
    </string-array>
    <string-array name="daily_routine_ans">
		<item>
			<li>It is important to get up at right time in the morning because all activities of the day follow that.</li>\n

		</item>
        <item>
			<li>Brushing your teeth at least twice a day is important to keep your teeth clean and healthy.</li>\n

			<li>It prevents dental and gum diseases.</li>\n

			<li>It also helps in maintaining a fresh breath that will help in enhancing your confidence.</li>\n

		</item>
        <item>
			<li>Taking bath regularly is important for maintaining good health as it protects from infections.</li>\n

			<li>Maintaining cleanliness is important for improving your appearance.</li>\n

			<li>It helps in building self-confidence, physical and emotional well-being</li>\n

		</item>
        <item>
			<li>Taking meals is an important daily activity. Food provides carbohydrates, proteins, fat, essential minerals,
            vitamins and fibres.</li>\n

			<li>All types of food that you eat can be divided into four groups:</li>\n

			<li>\u25CF Cereals, millets and pulses</li>\n

			<li>\u25CF Vegetables and fruits</li>\n

			<li>\u25CF Milk and milk products, egg, meat and fish</li>\n

			<li>\u25CF Oils, oilseeds nuts</li>\n




			<li>In a balanced diet, all types of food are in the desired quantities and proportions.</li>\n

			<li>Three major meals and three minor meals containing all types of foods after every two
            hours helps in fulfilling daily nutritional requirement. It also helps in proper digestion.</li>\n


		</item>
        <item>
			<li>Sleep gives rest to the body and mind.</li>\n

			<li>Sleeping for 8 hours at night is essential for remaining healthy</li>\n

			<li>IPoor sleep can result in poor attention and concentration, poor memory and irritability.
            It can affect physical health and may reduce immunity.</li>\n

			<li>Regular sleep schedule helps in maintaining physical and mental health. </li>\n


		</item>
        <item>
			<li>Walking is an important physical activity needed for good physical and mental health. </li>\n

			<li>It helps in prevention and control of obesity, joint pains, body-aches, diabetes, hypertension,
            heart disease and other chronic physical diseases. </li>\n

			<li>It improves mental well being, energy levels and quality of life.</li>\n

			<li>In a day, walking for 30-45 minutes or taking 10,000 steps is important</li>\n


		</item>
        <item>
			<li>Engaging in leisure activities is important activity in your daily routine.</li>\n

			<li>By engaging in leisure activities you feel good, spend time effectively and prevent boredom. This helps in coping with stress,
            improving your quality of life, satisfaction and overall well-being.</li>\n

			<li> Also, it acts as distraction from everyday worries.</li>\n

		</item>
    </string-array>
    <string-array name="iadl_que">
        <item>What are Instrumental Activities of Daily Living?</item>
        <item>Why are these important for you?</item>
        <item>How will they improve your quality of life?</item>
        <item>What do Instrumental Activities of Daily Life include?</item>
    </string-array>
    <string name="language_pref_prompt">Choose Language Preference</string>
    <string name="hint_login">Enter email ID</string>
    <string name="hint_login_pwd">Enter Password</string>
    <string name="register">REGISTER</string>
    <string name="hint_login_pwd_confirm">Confirm Password</string>
    <string name="caregiver_hint">Enter Caregiver ID</string>
    <string name="patient_hint">Enter Patient ID</string>
    <string name="change_lang">Switch Language</string>
    <string name="patient_text">PATIENT</string>
    <string name="caregiver_text">CAREGIVER</string>
    <string name="no_data_label">No data present on the current day</string>
</resources>