<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.zuccessful.trueharmony.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="133dp"
        android:minHeight="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/caregiver_id_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/caregiver_id_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:background="@android:color/white"
        android:hint="@string/caregiver_hint"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/patient_id_et"
        app:layout_constraintEnd_toEndOf="@+id/patient_id_et"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/patient_id_et"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/patient_id_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="145dp"
        android:background="@android:color/white"
        android:hint="@string/patient_hint"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/caregiver_id_et" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:hint="@string/hint_login_pwd"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caregiver_id_et" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="8dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_button"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        app:layout_constraintVertical_bias="0.367" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="144dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/patient_id_et" />


    <com.zuccessful.trueharmony.utilities.CustomSpinner
        android:id="@+id/language_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:entries="@array/language_arrays"
        android:gravity="center_vertical|center_horizontal"
        android:prompt="@string/language_pref_prompt"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        tools:layout_editor_absoluteX="119dp" />

    <Button
        android:id="@+id/lang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:text="@string/change_lang"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@+id/language_spinner"
        app:layout_constraintTop_toBottomOf="@+id/language_spinner" />
</android.support.constraint.ConstraintLayout>